aniimation and fixed background on mobile

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -2,7 +2,7 @@
     body {
         background-image: url(australia-alice-springs-roadtrip-the-explorers-way.jpg);
         background-repeat:no-repeat;
-        background-attachment:local,scroll;
+        background-attachment:fixed;
         background-size:cover;
     }
 
@@ -50,6 +50,14 @@
     .K_K {
         transform: translateY(-5px);
     }
+    .background_kangaroo {
+        display:flex;
+        
+        background-color: white;
+        transform: translate3d(0px,10px,40px);
+        object-fit:contain;
+        padding:24px;
+    }
     .animation {
         animation-name: Kaenguruanime;
         animation-duration: 2s;
@@ -57,8 +65,7 @@
         position: relative;
         width: 100px;
         height: 100px;
-        transform: translateY(-120px);
-        
+        transform: translateY(30px);
     }
 
     @keyframes Kaenguruanime {
@@ -68,7 +75,7 @@
         }
 
         50% {
-            top: -100px;
+            top: -80px;
             left: 0px;
         }
 
